Fix dark mode text colour in EditAttribute

--- a/src/css/card_dialog.css.scss
+++ b/src/css/card_dialog.css.scss
@@ -131,6 +131,9 @@
   border-bottom: 2px solid #f2cb8000;
   transition: border-bottom 0.5s;
   font-weight: bold;
+  &.darkmode {
+    color: $text-color;
+  }
 }
 
 .card-dialog__custom-attributes-editable-label--with-underline {
